feat(fan): make ominous-fire processing a real recipe type, with an EMI category
Follow-up to the previous commit, which shipped the fan type with a hard-coded
leaves -> steeleaf pair. berlord: with one recipe there is no reason for it not
to be in EMI. So it is a recipe now.

- bertieprogression:ominous_fan recipe type + serialiser (ingredient -> result),
  and the fan type resolves through the RecipeManager instead of a constant. The
  one entry moves into data as recipe/ominous_fan/steeleaf_from_leaves.json.
- berlords-emi gains an 'Ominous Fan Blowing' category. It matches on the recipe
  TYPE id rather than the recipe class, via a new Recipes.forEachOfType(): the
  two are separately published mods and nothing else in that module compiles
  against a sibling, so a type id plus vanilla's Recipe interface keeps the build
  graph as it was.
- The fan classes move to io.github.bertie_mc.bertieprogression, following the
  namespace refactor that landed while this work was in flight.

Not verified: neither mod has been run in game. Both compile.